test/good/functions/scope03.px

func f() def
    x = false

x = 1
f()
print x
