test/bad/generics/implicit03.px

func f(x) def
    return f(x)

print f(0)
